# pass3-calendar-website

./: Cargo.toml  Dockerfile  events.json  index.html
migrations/: 20231201000000_create_events_table.sql
src/: main.rs
