[package]
name = "pass3_calendar_website"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.6"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.4", features = ["fs"] }
# NEW: For talking to GitHub API
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
axum-extra = { version = "0.7", features = ["cookie"] }